--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,8 +14,8 @@ android {
         applicationId "com.wegdut.wegdut"
         minSdkVersion 16
         targetSdkVersion 29
-        versionCode 4
-        versionName "0.4"
+        versionCode 5
+        versionName "0.41"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
         vectorDrawables.useSupportLibrary true
@@ -139,4 +139,7 @@ dependencies {
     // coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.9'
+
+    // bugly
+    implementation 'com.tencent.bugly:crashreport:latest.release'
 }
