--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,11 +55,11 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'com.google.android.material:material:1.2.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
     implementation "androidx.viewpager2:viewpager2:1.0.0"
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
-    implementation "androidx.exifinterface:exifinterface:1.3.0"
+    implementation "androidx.exifinterface:exifinterface:1.3.1"
     testImplementation(platform('org.junit:junit-bom:5.7.0'))
     testImplementation('org.junit.jupiter:junit-jupiter')
     testImplementation 'org.mockito:mockito-core:3.3.3'
@@ -84,7 +84,7 @@ dependencies {
     implementation 'com.romandanylyk:pageindicatorview:1.0.3@aar'
 
     // Palette
-    implementation 'androidx.palette:palette:1.0.0'
+    implementation 'androidx.palette:palette-ktx:1.0.0'
 
     // CircleImage
     implementation 'de.hdodenhof:circleimageview:3.0.1'
@@ -142,4 +142,8 @@ dependencies {
 
     // bugly
     implementation 'com.tencent.bugly:crashreport:latest.release'
+
+    // work manager
+//    def work_version = "2.4.0"
+//    implementation "androidx.work:work-runtime-ktx:$work_version"
 }
