--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,7 @@
         <activity android:name="com.wegdut.wegdut.ui.news_details.NewsDetailsActivity" />
         <activity android:name="com.wegdut.wegdut.ui.user_modification.UserModificationActivity" />
         <activity android:name=".ui.exam_score.ExamScoreActivity" />
+        <activity android:name=".ui.library_code.LibraryCodeActivity" />
 
         <service android:name=".CourseService" />
     </application>
